# forge-docs-snapshot

./: README.md  pyproject.toml
.github/workflows/: mirror.yml
mirror/: add-custom-configuration-to-a-macro.md  forge.1.postman.md  forge.2.postman.md  forge.postman.md  index.md  llms.md  manifest.json
mirror/about-the-forge-data-processing-addendum/: index.md
mirror/access-app-logs/: index.md
mirror/access-rest-apis-exposed-by-a-forge-app/: index.md
mirror/access-to-forge-apps-for-unlicensed-jsm-users/: index.md
mirror/access-to-forge-apps-for-unlicensed-users/: index.md
mirror/action-components-guidelines/: index.md
mirror/add-configuration-to-a-macro/: index.md
mirror/add-configuration-to-a-macro-with-ui-kit/: index.md
mirror/add-configuration-to-a-macro-with-ui-kit-2/: index.md
mirror/add-content-security-and-egress-controls/: index.md
mirror/add-custom-configuration-to-a-macro/: index.md
mirror/add-routing-to-a-full-page-app/: index.md
mirror/add-scheduled-trigger/: index.md
mirror/add-scopes-to-call-an-atlassian-rest-api/: index.md
mirror/add-support-for-jira-as-an-optional-Atlassian-app/: index.md
mirror/add-support-for-jira-as-an-optional-atlassian-app/: index.md
mirror/adopt-user-based-billing/: index.md
mirror/adopting-forge-from-connect/: index.md
mirror/adopting-forge-from-connect-migrate-macro/: index.md
mirror/ai-development-toolkit/: index.md
mirror/alerts/: index.md
mirror/analytics-tool-policy/: index.md
mirror/app-compatibility/: index.md
mirror/app-context-security/: index.md
mirror/changelog/: index.md
(+921 files in other folders)
